--- a/cfg/stitcher-imx390cfg.yaml
+++ b/cfg/stitcher-imx390cfg.yaml
@@ -8,7 +8,7 @@ camsrcheight: 1080
 distorWidth: 1920
 distorHeight: 1080
 # undistor size can only be 960x540 or 1920x1080
-undistor: false
+undistor: true
 undistorWidth: 960
 undistorHeight: 540
 stitcherinputWidth: 640
