--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ add_compile_options(-std=c++14 -pthread)
 # add_definitions(-DDEBUG)
 # add_definitions(-DCAM_IMX390 -DDEV_MODE)
 # add_definitions(-DCAM_IMX424 -DDEV_MODE)
-add_definitions(-DYUYVCAM -DCAM_IMX424 -DDEV_MODE)
+# add_definitions(-DYUYVCAM -DCAM_IMX424 -DDEV_MODE)
+add_definitions(-DYUYVCAM -DCAM_IMX424)
 # add_definitions(-DCAM_IMX390)
 
 cuda_include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CUDA_INCLUDE_DIRS} )
