--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,8 @@ message(STATUS "CMAKE_CURRENT_SOURCE_DIR:::${CMAKE_CURRENT_SOURCE_DIR}")
 # add_compile_options(-std=c++14 -g )
 add_compile_options(-std=c++14 -pthread)
 # add_definitions(-DDEBUG)
-add_definitions(-DCAM_IMX390 -DDEV_MODE -DCENTRIC_STRUCT)
+# add_definitions(-DCAM_IMX390 -DDEV_MODE -DCENTRIC_STRUCT)
+add_definitions(-DCAM_IMX390 -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX390 -DDEV_MODE -DDISTRIBUTED_STRUCT)
 # add_definitions(-DCAM_IMX424 -DDEV_MODE -DCENTRIC_STRUCT)
 # add_definitions(-DCAM_IMX424 -DCENTRIC_STRUCT)
