--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,37 +95,155 @@ include_directories(
 # Build Node 
 #-------------------------------------------------------------------------------
 
-# add_executable(${PROJECT_NAME} src/imageProcess.cpp src/xavier.cpp src/PracticalSocket.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES} )
-
 # add_executable(sti src/sti.cpp )
+# target_link_libraries(sti   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
+
 # add_executable(sd src/stitching_detailed.cpp )
+# target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
+
 # add_executable(mo src/stithermo.cpp )
-# add_executable(testocv src/testocv.cpp  ${NVENCODER_SOURCE} ${COMMONCLSFILES})
-add_executable(testocv src/testocv.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
-add_executable(cameracuda src/camera_v4l2-cuda.cpp ${COMMONCLSFILES})
+# target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
+
 # add_executable(server src/Server.cpp  src/PracticalSocket.cpp)
+# target_link_libraries(server 
+#     ${OpenCV_LIBS})
 
+# add_executable(testocv src/testocv.cpp  ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+
+#-------------------------------------------------------------------------------
+# Build testocv 
+#-------------------------------------------------------------------------------
+add_executable(testocv src/testocv.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(testocv  -lyaml-cpp ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+ -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN)
+# target_link_libraries(testocv  -lyaml-cpp ${OPENGL_LIBRARY} ${OpenCV_LIBS} )
+
+
+#-------------------------------------------------------------------------------
+# Build cameracuda 
+#-------------------------------------------------------------------------------
+add_executable(cameracuda src/camera_v4l2-cuda.cpp ${COMMONCLSFILES})
+target_link_libraries(cameracuda  
+    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+     ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+     )
+
+#-------------------------------------------------------------------------------
+# Build master 
+#-------------------------------------------------------------------------------
 add_executable(master src/master.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(master  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+-L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+ ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+ -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+ )
+
+#-------------------------------------------------------------------------------
+# Build master2 
+#-------------------------------------------------------------------------------
 add_executable(master2 src/master2.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(master2  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+-L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+ ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+ -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+ )
+
+#-------------------------------------------------------------------------------
+# Build replay 
+#-------------------------------------------------------------------------------
 add_executable(replay src/replay.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(replay  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+-L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+ ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+ -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+ )
+
+#-------------------------------------------------------------------------------
+# Build replay2 
+#-------------------------------------------------------------------------------
 add_executable(replay2 src/replay2.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(replay2  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+-L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+ ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+ -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+ )
+
+#-------------------------------------------------------------------------------
+# Build camshow 
+#-------------------------------------------------------------------------------
 add_executable(camshow src/camshow.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES} )
+target_link_libraries(camshow  ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES}  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+ -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+  )
+
+#-------------------------------------------------------------------------------
+# Build camshow-2 
+#-------------------------------------------------------------------------------
 add_executable(camshow-2 src/camshow-2.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES} )
+target_link_libraries(camshow-2  ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES}  -lyaml-cpp
+-L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+ -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
+  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+  )
 
+#-------------------------------------------------------------------------------
+# Build panocam
+#-------------------------------------------------------------------------------
 add_library(panocam SHARED src/panocam.cpp src/panocamimpl.cpp src/imageProcess.cpp src/PracticalSocket.cpp src/nvrender.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(panocam
+    ${OPENGL_LIBRARY} ${OpenCV_LIBS} -lyaml-cpp
+    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+    -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+)
+set_target_properties(panocam PROPERTIES VERSION ${LIB_PANO_MAJOR}.${LIB_PANO_MINOR}.${LIB_PANO_PATCH} SOVERSION ${LIB_PANO_MAJOR})
 
+#-------------------------------------------------------------------------------
+# Build demo
+#-------------------------------------------------------------------------------
 add_executable(demo src/demo.cpp)
+target_link_libraries(demo
+    panocam)
+
+#-------------------------------------------------------------------------------
+# Build panoapp
+#-------------------------------------------------------------------------------
 add_executable(panoapp src/panoapp.cpp src/nvrender.cpp src/imageProcess.cpp src/context.cpp src/PracticalSocket.cpp src/fsmstate.cpp src/panocamimpl.cpp src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES})
+target_link_libraries(panoapp
+    ${OPENGL_LIBRARY} ${OpenCV_LIBS}  ${CUDA_LIBRARIES}
+    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
+    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
+    -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
+    -lyaml-cpp
+    -lpthread)
 
+#-------------------------------------------------------------------------------
+# Build slave
+#-------------------------------------------------------------------------------
 add_executable(slave src/slave.cpp  src/PracticalSocket.cpp src/stitcherglobal.cpp )
-add_executable(slaveshow src/slaveshow.cpp  src/nvrender.cpp src/imageProcess.cpp src/PracticalSocket.cpp  src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES}  )
-
 target_link_libraries(slave 
 ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES}  -lyaml-cpp
 -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
  -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
   ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS} -lpthread)
 
+
+#-------------------------------------------------------------------------------
+# Build slaveshow
+#-------------------------------------------------------------------------------
+add_executable(slaveshow src/slaveshow.cpp  src/nvrender.cpp src/imageProcess.cpp src/PracticalSocket.cpp  src/stitcherglobal.cpp ${NVENCODER_SOURCE} ${COMMONCLSFILES}  )
 target_link_libraries(slaveshow 
  -lyaml-cpp 
  ${OPENGL_LIBRARY} 
@@ -137,93 +255,19 @@ target_link_libraries(slaveshow
  ${OpenCV_LIBS} 
   )
 
- target_link_libraries(master  -lyaml-cpp
- -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-
- target_link_libraries(master2  -lyaml-cpp
- -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-
- target_link_libraries(replay  -lyaml-cpp
- -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-
- target_link_libraries(replay2  -lyaml-cpp
- -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-
-target_link_libraries(camshow  ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES}  -lyaml-cpp
--L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-target_link_libraries(camshow-2  ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES}  -lyaml-cpp
--L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-  )
-# target_link_libraries(sti   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
-# target_link_libraries(sd   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
-# target_link_libraries(mo   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} )
 # target_link_libraries(testocv   ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
 # -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
 #  -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
 # -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
 # spdlog::spdlog)
 
-target_link_libraries(testocv  -lyaml-cpp ${OPENGL_LIBRARY} ${OpenCV_LIBS} ${CUDA_LIBRARIES} 
--L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
- -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-  ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-  -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN)
-# target_link_libraries(testocv  -lyaml-cpp ${OPENGL_LIBRARY} ${OpenCV_LIBS} )
 
-target_link_libraries(cameracuda  
-    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
-    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-     ${CUDA_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS}
-     )
-
-target_link_libraries(panocam
-    ${OPENGL_LIBRARY} ${OpenCV_LIBS} -lyaml-cpp
-    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
-    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-    -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-    
-)
-target_link_libraries(demo
-    panocam)
-    
 # target_link_libraries(panoapp
 #     panocam -lpthread)
-target_link_libraries(panoapp
-    ${OPENGL_LIBRARY} ${OpenCV_LIBS}  ${CUDA_LIBRARIES}
-    -L/usr/lib/aarch64-linux-gnu/tegra/ -lnvbuf_utils  
-    -L/usr/lib/aarch64-linux-gnu/ -lv4l2 -lEGL -lGLESv2 -lX11 
-    -L${CMAKE_CURRENT_SOURCE_DIR}/cfg/ -ltkDNN
-    -lyaml-cpp
-    -lpthread)
 
-# target_link_libraries(server 
-#     ${OpenCV_LIBS})
+
 # target_link_libraries(slave 
 #     ${OpenCV_LIBS})
 
-set_target_properties(panocam PROPERTIES VERSION ${LIB_PANO_MAJOR}.${LIB_PANO_MINOR}.${LIB_PANO_PATCH} SOVERSION ${LIB_PANO_MAJOR})
 
 # install(TARGETS testocv RUNTIME DESTINATION /home/nvidia/ssd/code/0929IS)
