--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,7 +267,6 @@ target_link_libraries(slaveshow
 
 
 # target_link_libraries(slave 
-#     ${OpenCV_LIBS})
-
+#     ${OpenCV_LIBS})//
 
 # install(TARGETS testocv RUNTIME DESTINATION /home/nvidia/ssd/code/0929IS)
